--- a/my-app/src/app/(pages)/auth/login/page.css
+++ b/my-app/src/app/(pages)/auth/login/page.css
@@ -80,27 +80,27 @@
 
 .Login-in-three {
   width: 50%;
+  margin: auto;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: stretch;
+  height: 48px;
+  border: 1px solid #e0e0e0;
+  border-radius: 5px;
+  overflow: hidden;
 }
 
 .Login-in-three-one {
   width: 50%;
-  border: 0.1px solid gray;
-  text-align: center;
-}
-
-.Login-in-three-one {
-  font-size: 1.4rem;
-  background-color: rgb(216, 215, 215);
-  color: rgb(76, 76, 230);
-  padding: 0.5rem;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
+  background-color: #f5f5f5;
+  color: #333;
   display: flex;
   align-items: center;
   justify-content: space-around;
+  font-family: monospace;
+  font-size: 1.2rem;
+  letter-spacing: 2px;
+  border: none;
+  border-right: 1px solid #e0e0e0;
 }
 
 .Login-in-three-two {
@@ -109,16 +109,18 @@
 
 .Login-in-three-two input {
   width: 100%;
-  padding: 0.8rem;
+  height: 100%;
+  padding: 0 1rem;
   border: none;
-  border: 0.1px solid gray;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
   font-size: 1rem;
+  background-color: white;
+}
+
+.Login-in-three-two input:focus {
+  outline: none;
 }
 
 @media all and (max-width: 500px) {
-
   .LoginComponent-in {
     padding: 1rem;
     height: 80vh;
@@ -162,6 +164,15 @@
   .Login-in-four button {
     padding: 0.7rem;
     font-size: 1rem;
+  }
+
+  .Login-in-three {
+    height: 42px;
+  }
+  
+  .Login-in-three-one {
+    font-size: 1rem;
+    letter-spacing: 1px;
   }
 }
 
