--- a/my-app/src/app/(pages)/lead/ManageSessions/takeAttendance/page.css
+++ b/my-app/src/app/(pages)/lead/ManageSessions/takeAttendance/page.css
@@ -452,3 +452,19 @@ tr:hover {
 .download-btn:active {
   background-color: #3d8b40;
 }
+
+td[data-residency="Hosteler"] {
+    background-color: #e3f2fd;
+}
+
+td[data-residency="Day Scholar"] {
+    background-color: #f3e5f5;
+}
+
+tr[data-residency="Hosteler"] {
+    border-left: 3px solid #2196f3;
+}
+
+tr[data-residency="Day Scholar"] {
+    border-left: 3px solid #9c27b0;
+}
