--- a/my-app/src/app/(pages)/components/navbar/page.css
+++ b/my-app/src/app/(pages)/components/navbar/page.css
@@ -35,9 +35,10 @@
 }
 
 .AN-one img {
-    width: 100%;
-    height: 100%;
+    width: 70%;
+    height: 70%;
     object-fit: cover;
+    border-radius: 10px;
 }
 
 .AN-two {
