--- a/my-app/src/app/Components/Navbar/Navbar.css
+++ b/my-app/src/app/Components/Navbar/Navbar.css
@@ -43,9 +43,10 @@
 }
 
 .Navbar-one img {
-  width: 50%;
+  width: 40%;
   height: auto;
   object-fit: cover;
+  border-radius: 10px;
 }
 
 .Navbar-one h1 {
