--- a/my-app/src/app/UI/Team/team.css
+++ b/my-app/src/app/UI/Team/team.css
@@ -27,8 +27,8 @@
 
 .team-two h1 {
     font-size: 2rem;
-    font-weight: 600;
     color: black;
+    font-weight: 700;
 }
 
 .team-two p {
@@ -40,69 +40,20 @@
 
 .team-three {
     width: 100%;
+    padding: 2rem 0rem;
 }
 
 .team-three-in {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    justify-content: space-between;
-    gap: 1rem;
-}
-
-.team-card {
-    width: 18%;
-    padding: 2rem 0rem 0rem 0rem;
-}
-
-.team-card-in {
-    width: 100%;
-    min-height: 20rem;
-    background-size: contain ;
+    width: 100%;   
+    min-height: 55vh;
+    background-image: url('https://i.imghippo.com/files/PYQ7895.jpg');
+    background-size: contain;
+    background-position: center;
     background-repeat: no-repeat;
-    position: relative;
+    border: 1px solid rgb(192, 192, 192);
+    border-radius: 10px;
 }
 
-.team-card-in-one {
-    width: 80%;
-    margin: auto;
-    position: absolute;
-    bottom: 0%;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: white;
-    padding: .5rem 0rem;
-    border: 1px solid rgb(206, 205, 205);
-}
-
-.team-card-in-one-one {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.team-card-in-one-one p {
-    font-size: 1rem;
-    font-weight: 600;
-    color: black;
-}
-
-.team-card-in-one-one p:nth-child(2) {
-    font-size: 0.8rem;
-    font-weight: 400;
-    color: grey;
-}
-
-.team-card-in-one-two {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-}
 
 .team-four {
     width: 100%;
@@ -110,7 +61,6 @@
     display: flex;
     align-items: center;
     justify-content: right;
-    padding: 2rem 0rem 0rem 0rem;
 }
 
 .team-four a {
