chore: update image link

--- a/my-app/src/app/UI/Team/team.css
+++ b/my-app/src/app/UI/Team/team.css
@@ -46,8 +46,8 @@
 .team-three-in {
     width: 100%;   
     min-height: 55vh;
-    background-image: url('https://i.imghippo.com/files/PYQ7895.jpg');
-    background-size: contain;
+    background-image: url('https://i.imghippo.com/files/YKA2792s.jpg');
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     border: 1px solid rgb(192, 192, 192);
